--- a/Develop/style.css
+++ b/Develop/style.css
@@ -49,21 +49,25 @@ textarea{
   border-top: 1px dashed #000000;
 }
 
+/*see color function*/
 .past {
   background-color: #d3d3d3;
   color: white;
 }
 
+/*see color function*/
 .present {
   background-color: #ff6961;
   color: white;
 }
 
+/*see color function*/
 .future {
   background-color: #77dd77;
   color: white;
 }
 
+/*see save button*/
 .saveBtn {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
@@ -72,6 +76,7 @@ textarea{
   color: white;
 }
 
+/*see save button*/
 .saveBtn i:hover {
   font-size: 20px;
   transition: all .3s ease-in-out;
